# rustyfarian-power

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  VISION.md  deny.toml  justfile  release-plan.md
.cargo/: config.toml.dist
.github/workflows/: audit.yml  clippy.yml  fmt.yml  rust.yml
crates/battery-monitor/: Cargo.toml  build.rs
crates/battery-monitor/examples/: idf_esp32_battery.rs  idf_esp32s3_battery.rs
crates/battery-monitor/src/: charging.rs  config.rs  esp_adc.rs  esp_charging.rs  esp_sleep.rs  lib.rs  sleep.rs
crates/rustyfarian-esp-idf-power/: Cargo.toml  README.md
crates/rustyfarian-esp-idf-power/examples/: idf_esp32_battery.rs  idf_esp32_chargeprobe.rs  idf_esp32s3_battery.rs
crates/rustyfarian-esp-idf-power/src/: esp_adc.rs  esp_charging.rs  esp_sleep.rs  lib.rs
crates/stoker/: Cargo.toml  README.md  build.rs
crates/stoker/src/: charging.rs  config.rs  lib.rs  sleep.rs
docs/: ROADMAP.md  hardware-setup.md  key-insights.md  project-lore.md
docs/adr/: 000-template.md
docs/features/: 000-template.md
scripts/: build-example.sh  doctor.sh  ensure-bootloader.sh  flash.sh  lib.sh  ramdisk.sh  release-validate.sh  run-example.sh  xtensa-toolchain.sh
