[workspace]
resolver = "2"
members = ["crates/*"]

[workspace.package]
authors = ["datenkollektiv"]
edition = "2021"
rust-version = "1.88"
license = "MIT OR Apache-2.0"
repository = "https://github.com/datenkollektiv/rustyfarian-power"

[workspace.dependencies]
anyhow = "1"
log = "0.4"
esp-idf-hal = "0.46"
