[package]
name = "battery-monitor"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Battery voltage monitoring for embedded projects"
keywords = ["battery", "adc", "embedded", "esp32"]
categories = ["embedded"]

[features]
default = ["esp-idf"]
esp-idf = ["dep:esp-idf-hal"]

[dependencies]
anyhow.workspace = true
log.workspace = true
esp-idf-hal = { workspace = true, optional = true }

[[example]]
name = "idf_esp32_battery"
required-features = ["esp-idf"]

[build-dependencies]
embuild = { version = "0.33", features = ["espidf"] }
